# seaflowbdd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
examples/: hello.rs  majority.rs
src/: lib.rs  manager.rs  node.rs  pair_product.rs  path_count.rs  reduce.rs  restrict.rs  return_map.rs
tests/: eval_truth_tables.rs  path_count.rs  proptest_corpus.rs  restrict_compose.rs
